--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-font=Fira Code:size=18, Twemoji:size=17.5
+font=FiraCode Nerd Font:size=18, Twemoji:size=17.5
 workers=8
 
 [colors]
