--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,7 +15,7 @@ set $down j
 set $up k
 set $right l
 
-set $term foot
+set $term footclient
 exec foot -s
 
 set $menu bemenu-run -i -p "" | xargs swaymsg exec --
